--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,42 @@
     margin: 0;
     padding: 0;
 }
+
+.App {
+    display: flex;
+    height: 100vh;
+}
+
+section {
+    margin: auto;
+    text-align: center;
+}
+
+p,
+.buttons {
+    font-size: 48px;
+    text-align: center;
+}
+
+.buttons button {
+    width: 48px;
+    height: 48px;
+}
+
+.buttons button:nth-child(2) {
+    margin: 10px;
+}
+
+input {
+    width: 50px;
+    height: 50px;
+    font-size: 25px;
+    text-align: center;
+    margin: 5px;
+}
+
+.valueBtn {
+    width: 80px;
+    height: 50px;
+    margin-top: 5px;
+}
